--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,6 +17,7 @@
             android:text="New Available"
             />
         <TextView
+            android:id="@+id/new_more"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="310dp"
@@ -63,25 +64,25 @@
         >
         <ImageView
             android:layout_width="80dp"
-            android:layout_height="120dp"
+            android:layout_height="100dp"
             android:layout_marginLeft="8dp"
             android:src="@drawable/book"
             />
         <ImageView
             android:layout_width="80dp"
-            android:layout_height="120dp"
+            android:layout_height="100dp"
             android:layout_marginLeft="8dp"
             android:src="@drawable/book"
             />
         <ImageView
             android:layout_width="80dp"
-            android:layout_height="120dp"
+            android:layout_height="100dp"
             android:layout_marginLeft="8dp"
             android:src="@drawable/book"
             />
         <ImageView
             android:layout_width="80dp"
-            android:layout_height="120dp"
+            android:layout_height="100dp"
             android:layout_marginLeft="8dp"
             android:src="@drawable/book"
             />
@@ -90,7 +91,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="190dp">
+        android:layout_marginTop="200dp">
         <TextView
             android:id="@+id/text3"
             android:layout_width="wrap_content"
@@ -114,6 +115,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
+
             />
 
     </LinearLayout>
