--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -5,20 +5,87 @@
     android:id="@+id/draw_"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.puthirin.library.BookDetailActivity">
 
     <ImageView
         android:layout_width="130dp"
+        android:id="@+id/cover"
         android:layout_height="200dp"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/book" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Title: "
+        android:text="Title    : "
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/cover"
         android:id="@+id/title"
         />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Author : "
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/cover"
+        android:id="@+id/author"
+        />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Type    : "
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="80dp"
+        android:layout_below="@+id/cover"
+        android:id="@+id/type"
+        />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cover"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="150dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/title_d"
+            android:layout_marginTop="20dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/author_d"
+            android:layout_marginTop="50dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
+            android:id="@+id/type_d"/>
+    </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Description :"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:id="@+id/description"
+        android:layout_below="@id/type"/>
+    <TextView
+        android:layout_width="300dp"
+        android:layout_height="180dp"
+        android:id="@+id/text_dis"
+        android:background="@drawable/description"
+        android:layout_below="@+id/description"
+        android:layout_marginLeft="30dp"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Book"
+        android:layout_below="@+id/text_dis"
+        android:background="@drawable/btn"
+        android:layout_marginLeft="150dp"/>
 
 </RelativeLayout>
