--- a/app/src/main/res/layout/activity_list_books.xml
+++ b/app/src/main/res/layout/activity_list_books.xml
@@ -11,7 +11,8 @@
         android:id="@+id/list_books"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/activity_vertical_margin">
+        android:layout_margin="@dimen/activity_vertical_margin"
+        >
 
     </android.support.v7.widget.RecyclerView>
 
