--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_camera"
@@ -18,5 +19,14 @@
             android:icon="@drawable/ic_menu_manage"
             android:title="Tools" />
     </group>
+    <item
+        android:id="@+id/search_bar"
+        android:orderInCategory="100"
+        android:title="search"
+        android:icon="@drawable/ic_search_black_24dp"
+        app:showAsAction="always">
+    </item>
+
+
 
 </menu>
