--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,5 +23,9 @@
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/menu"
         />
-
+    <com.miguelcatalan.materialsearchview.MaterialSearchView
+        android:id="@+id/searcch_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
 </android.support.v4.widget.DrawerLayout>
