--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -58,6 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/author_d"
+
             android:layout_marginTop="40dp"/>
         <TextView
             android:layout_width="wrap_content"
@@ -84,6 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Book"
+        android:id="@+id/borrow"
         android:layout_below="@+id/text_dis"
         android:background="@drawable/btn"
         android:layout_marginLeft="150dp"/>
